--- a/index.html
+++ b/index.html
@@ -359,6 +359,14 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
                 <img src="img/ipad3.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
                 <img src="img/ipad9.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
             </div>
+
+            <h3 style="text-align: center"> The story behind the name </h3>
+            <p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">
+                In English, "Grading" means evaluating.
+In French 🇫🇷, "Gradin" sounds almost the same, but it means the place from which we watch (tiered seating).</p>
+<p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">That small shift changes everything.</p>
+
+<p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">Gradin is not about putting teachers in the spotlight — it’s about giving them space — to observe, to listen, to encourage, and to guide students as they learn and grow.
         </div>
     </section>
 
