the story behind the name

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
 In French 🇫🇷, "Gradin" sounds almost the same, but it means the place from which we watch (tiered seating).</p>
 <p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">That small shift changes everything.</p>
 
-<p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">Gradin is not about putting teachers in the spotlight — it’s about giving them space — to observe, to listen, to encourage, and to guide students as they learn and grow.
+<p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">GradIn is not about putting teachers in the spotlight — it’s about giving them space — to observe, to listen, to encourage, and to guide students as they learn and grow.
         </div>
     </section>
 
