--- a/index.html
+++ b/index.html
@@ -317,6 +317,23 @@
             text-decoration: none;
         }
 
+        .brittany-flag {
+            text-align: center;
+            margin-top: 40px;
+        }
+
+        .brittany-flag img {
+            height: 150px;
+            vertical-align: middle;
+            margin-right: 5px;
+            filter: grayscale(100%);
+            transition: filter 0.4s ease;
+        }
+
+        .brittany-flag img:hover {
+            filter: grayscale(0%);
+        }
+
         /* Mobile Optimization for iPhone */
         @media (max-width: 600px) {
             /* Hide the app icon */
@@ -398,7 +415,7 @@
     <section id="overview">
         <div class="container">
            
-            <h2>Transform Your Grading Workflow</h2>
+            <h2>Transform Your Gradin(g) Workflow</h2>
             <p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">
                 In a world where AI can generate perfect essays and instant answers, meaningful evaluation depends on human insight.
 GradIn gives teachers a new way to assess learning — through outcomes, criteria, and evidence that reveal authentic progress.
@@ -415,11 +432,13 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
             <h3 style="text-align: center"> The story behind the name </h3>
             <p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">
                 In English, "Grading" means evaluating.
-In French 🇫🇷, "Gradin" sounds almost the same, but it means the place from which we watch (tiered seating).</p>
-<p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">That small shift changes everything.</p>
+                In French 🇫🇷, "Gradin" sounds almost the same, but it means the place from which we watch (tiered seating).</p>
+            <p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">That small shift changes everything.</p>
+            <p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">GradIn is not about putting teachers in the spotlight — it’s about giving them space — to observe, to listen, to encourage, and to guide students as they learn and grow.</p>
 
-<p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">GradIn is not about putting teachers in the spotlight — it’s about giving them space — to observe, to listen, to encourage, and to guide students as they learn and grow.
+
         </div>
+            
     </section>
 
     <!-- Features Section -->
@@ -621,14 +640,38 @@ In French 🇫🇷, "Gradin" sounds almost the same, but it means the place from
     <!-- Contact Section -->
     <section id="contact">
         <div class="container">
-            <h2>Get in Touch</h2>
+
+            <h2 style="text-align: center"> About the author </h2>
+            <p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">
+                I'm Vincent Choqueuse, an Associate Professor in Signal Processing and a teacher passionate about helping students grow.
+                Over the years, I’ve spent countless hours designing lessons, supervising projects, and evaluating students — often using tools that felt too heavy, too rigid, or too impersonal.
+            </p>
+
+            <p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">
+                I built <strong>Gradin</strong> because I wanted something different — a simple, elegant way to observe and encourage students without losing the human connection.
+                No noise, no distractions — just a clear space where teaching and learning meet naturally.
+                As an educator and researcher, I believe technology should amplify, not replace, the human side of education.
+                <strong>Gradin</strong> is my small contribution toward that vision.
+            </p>
+
+            <p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">
+— a tool built by a teacher, for teachers, designed with care in Brittany. — 
+
+            </p>
+
+            <div class="brittany-flag">
+                <img src="https://upload.wikimedia.org/wikipedia/fr/b/bb/Produit_en_Bretagne_logo.png" 
+            alt="Brittany Flag" style="height: 150px; vertical-align: middle; margin-right: 5px;">
+            </div>
+
+
+            <h3>Get in Touch</h3>
 
             <div class="contact-box">
                 <h3>Need New Functionalities or Report an Issue</h3>
                 <p style="margin: 20px 0;">We're here to help you make the most of GradIn.</p>
                 <p>
-                    <strong>Github Issue:</strong><br>
-                    <a href="https://github.com/vincentchoqueuse/gradin/issues">https://github.com/vincentchoqueuse/gradin/issues</a>
+                    <a href="https://github.com/vincentchoqueuse/gradin/issues">Github Issue</a>
                 </p>
             </div>
 
