--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="GradIn - Professional outcome-based grading for teachers. Track student progress with standards-based assessment.">
-    <title>GradIn - Outcome-Based Grading for Teachers</title>
+    <meta name="description" content="GradIn - Professional outcome-based GradIng for teachers. Track student progress with standards-based assessment.">
+    <title>GradIn - Outcome-Based GradIng for Teachers</title>
     <style>
         :root {
             --indigo: #5856D6;
@@ -387,7 +387,7 @@
         <div class="container">
             <img src="./img/icon.png" alt="GradIn App Icon" class="app-icon">
             <h1>GradIn <span style="font-size:1rem;">[ɡʁa.dɛ̃]</span></h1>
-            <p>Outcome-based grading</p>
+            <p>Outcome-based GradIng</p>
         </div>
     </header>
 
@@ -401,7 +401,7 @@
             <li><a href="#contact" class="menu-link">Contact</a></li>
             <li><a href="privacy.html" class="menu-link">Privacy Policy</a></li>
             <li>
-                <a href="https://github.com/vincentchoqueuse/gradin/issues" target="_blank" rel="noopener" class="menu-link">
+                <a href="https://github.com/vincentchoqueuse/GradIn/issues" target="_blank" rel="noopener" class="menu-link">
                     <svg class="github-icon" viewBox="0 0 16 16">
                         <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52 0-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.01.08-2.1 0 0 .67-.21 2.2.82a7.5 7.5 0 0 1 2-.27c.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.09.16 1.9.08 2.1.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.19 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
                     </svg>
@@ -415,7 +415,7 @@
     <section id="overview">
         <div class="container">
            
-            <h2>Transform Your Gradin(g) Workflow</h2>
+            <h2>Transform Your GradIn(g) Workflow</h2>
             <p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">
                 In a world where AI can generate perfect essays and instant answers, meaningful evaluation depends on human insight.
 GradIn gives teachers a new way to assess learning — through outcomes, criteria, and evidence that reveal authentic progress.
@@ -425,14 +425,14 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
             <!-- App Screenshots Placeholder -->
             <div class="screenshots">
                 <img src="img/ipad1.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
-                <img src="img/ipad3.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
-                <img src="img/ipad9.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
+                <img src="img/ipad2.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
+                <img src="img/ipad5.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
             </div>
 
             <h3 style="text-align: center"> The story behind the name </h3>
             <p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">
-                In English, "Grading" means evaluating.
-                In French 🇫🇷, "Gradin" sounds almost the same, but it means the place from which we watch (tiered seating).</p>
+                In English, "GradIng" means evaluating.
+                In French 🇫🇷, "GradIn" sounds almost the same, but it means the place from which we watch (tiered seating).</p>
             <p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">That small shift changes everything.</p>
             <p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">GradIn is not about putting teachers in the spotlight — it’s about giving them space — to observe, to listen, to encourage, and to guide students as they learn and grow.</p>
 
@@ -449,7 +449,7 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
             <div class="features">
                 <div class="feature-card">
                     <h3>Quick Assessment</h3>
-                    <p>Assess multiple criteria simultaneously with visual grading and percentage display. Add detailed comments and track assessment history over time.</p>
+                    <p>Assess multiple criteria simultaneously with visual GradIng and percentage display. Add detailed comments and track assessment history over time.</p>
                 </div>
 
                 <div class="feature-card">
@@ -487,7 +487,7 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
         <div class="container">
             <h2>How to Use GradIn</h2>
 
-            <img src="img/ipad10.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
+            <img src="img/ipad8.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
 
             <h3>Getting Started</h3>
 
@@ -530,8 +530,8 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
             <!-- Feature Image Placeholder -->
             <div class="screenshots">
                 <img src="img/iphone1.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
-                <img src="img/iphone3.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
-                <img src="img/iphone8.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
+                <img src="img/iphone2.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
+                <img src="img/iphone5.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
             </div>
 
 
@@ -552,9 +552,9 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
             <h2>Frequently Asked Questions</h2>
 
             <div class="faq-item">
-                <div class="faq-question">What is outcome-based grading?</div>
+                <div class="faq-question">What is outcome-based GradIng?</div>
                 <div class="faq-answer">
-                    Outcome-based grading focuses on measuring student achievement against specific learning outcomes rather than averaging scores. Each outcome has defined criteria, and students are assessed multiple times until they demonstrate mastery.
+                    Outcome-based GradIng focuses on measuring student achievement against specific learning outcomes rather than averaging scores. Each outcome has defined criteria, and students are assessed multiple times until they demonstrate mastery.
                 </div>
             </div>
 
@@ -573,7 +573,7 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
             </div>
 
             <div class="faq-item">
-                <div class="faq-question">What are the grading levels?</div>
+                <div class="faq-question">What are the GradIng levels?</div>
                 <div class="faq-answer">
                     GradIn uses six levels: Unacceptable (0%), Very Poor (25%), Poor (50%), Satisfactory (75%), Good (100%), and Exceeds Expectations (125%). These percentages are used to calculate outcome averages and validation status.
                 </div>
@@ -648,10 +648,9 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
             </p>
 
             <p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">
-                I built <strong>Gradin</strong> because I wanted something different — a simple, elegant way to observe and encourage students without losing the human connection.
+                I built <strong>GradIn</strong> because I wanted something different — a simple, elegant way to observe and encourage students without losing the human connection.
                 No noise, no distractions — just a clear space where teaching and learning meet naturally.
-                As an educator and researcher, I believe technology should amplify, not replace, the human side of education.
-                <strong>Gradin</strong> is my small contribution toward that vision.
+               I believe technology should amplify, not replace, the human side of education.
             </p>
 
             <p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">
@@ -671,13 +670,13 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
                 <h3>Need New Functionalities or Report an Issue</h3>
                 <p style="margin: 20px 0;">We're here to help you make the most of GradIn.</p>
                 <p>
-                    <a href="https://github.com/vincentchoqueuse/gradin/issues">Github Issue</a>
+                    <a href="https://github.com/vincentchoqueuse/GradIn/issues">Github Issue</a>
                 </p>
             </div>
 
             <p style="text-align: center; margin-top: 40px; color: var(--text-secondary);">
                 <strong>Perfect for:</strong><br>
-                K-12 teachers • University instructors • Training coordinators • Any educator using standards-based or outcome-based grading
+                K-12 teachers • University instructors • Training coordinators • Any educator using standards-based or outcome-based GradIng
             </p>
         </div>
     </section>
@@ -693,8 +692,8 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
             <p style="margin-top: 10px;">
                 <a href="privacy.html" style="color: var(--indigo); text-decoration: none;">Privacy Policy</a> |
                 <a href="#contact" style="color: var(--indigo); text-decoration: none;">Contact</a>
-                <a href="https://github.com/vincentchoqueuse/gradin" target="_blank">GitHub</a> |
-                <a href="https://github.com/vincentchoqueuse/gradin/issues" target="_blank">Report an Issue</a>
+                <a href="https://github.com/vincentchoqueuse/GradIn" target="_blank">GitHub</a> |
+                <a href="https://github.com/vincentchoqueuse/GradIn/issues" target="_blank">Report an Issue</a>
             </p>
         </div>
     </footer>
