--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
         <div class="container">
             <h2>How to Use GradIn</h2>
 
-            <img src="img/ipad8.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
+            <img src="img/ipad9.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
 
             <h3>Getting Started</h3>
 
@@ -525,6 +525,12 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
                 <span class="step-number">6</span>
                 <strong>Export Data</strong>
                 <p>Export your grades to CSV format for reports or external grade books. The export includes validation status and best assessment percentages for each criterion.</p>
+            </div>
+
+            <div class="step">
+                <span class="step-number">7</span>
+                <strong>Share Data</strong>
+                <p>Show QR code to students so they can instantly receive their personalized progress report by email — no accounts or cloud needed.</p>
             </div>
 
             <!-- Feature Image Placeholder -->
