--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
 
             <div class="contact-box">
                 <h3>Need New Functionalities or Report an Issue</h3>
-                <p style="margin: 20px 0;">We're here to help you make the most of GradIn.</p>
+                <p style="margin: 20px 0;">I'm here to help you make the most of GradIn.</p>
                 <p>
                     <a href="https://github.com/vincentchoqueuse/GradIn/issues">Github Issue</a>
                 </p>
