--- a/privacy.html
+++ b/privacy.html
@@ -291,7 +291,7 @@
             If you have questions or concerns about this Privacy Policy or how Gradin handles your data, please contact us:
         </p>
         <p style="margin-left: 20px;">
-            <strong>Email:</strong> <a href="mailto:support@Gradin.app" style="color: var(--indigo);">support@Gradin.app</a>
+            <strong>Email:</strong> <a href="mailto:vincent.choqueuse@icloud.com"" style="color: var(--indigo);">vincent.choqueuse@icloud.com</a>
         </p>
 
         <h2>Consent</h2>
@@ -305,7 +305,7 @@
             <p>&copy; 2025 Gradin. All rights reserved.</p>
             <p style="margin-top: 10px;">
                 <a href="index.html">Home</a> |
-                <a href="mailto:support@Gradin.app">Contact</a>
+                <a href="mailto:vincent.choqueuse@icloud.com">Contact</a>
             </p>
         </div>
     </footer>
