--- a/index.html
+++ b/index.html
@@ -447,37 +447,38 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
             <h2>Key Features</h2>
 
             <div class="features">
+
                 <div class="feature-card">
-                    <h3>Quick Assessment</h3>
-                    <p>Assess multiple criteria simultaneously with visual GradIng and percentage display. Add detailed comments and track assessment history over time.</p>
+                    <h3>Privacy by Design</h3>
+                    <p>Your data belongs to you. Everything stays on your device and your personal iCloud (if enabled) — never on our servers (we don’t even have any), never shared.</p>
                 </div>
 
                 <div class="feature-card">
-                    <h3>Outcome Validation</h3>
-                    <p>Define learning outcomes with custom criteria. Set validation thresholds (0-100%) and track automatic validation per student with visual indicators.</p>
+                    <h3>Fast & Visual Assessment</h3>
+                    <p>Evaluate multiple criteria in seconds with intuitive sliders and visual grading. Add comments and track each student's progress over time.</p>
                 </div>
 
                 <div class="feature-card">
-                    <h3>Student Progress</h3>
-                    <p>Individual student profiles with photos, comprehensive assessment history, and progress visualization per outcome.</p>
+                    <h3>Competency Tracking</h3>
+                    <p>Define learning outcomes, set mastery thresholds, and let GradIn automatically validate progress with clear visual indicators.</p>
                 </div>
 
                 <div class="feature-card">
-                    <h3>Analytics Dashboard</h3>
-                    <p>View Min/Max/Mean statistics per criterion, class-wide performance overview, and color-coded progress indicators.</p>
+                    <h3>Individual Progress Profiles</h3>
+                    <p>Each student gets a clear profile — photo, history, and progress visualization per outcome — all available at a glance.</p>
                 </div>
 
                 <div class="feature-card">
-                    <h3>Data Management</h3>
-                    <p>Import students via CSV for bulk upload. Export grades to CSV for reports. Full control over your data with optional iCloud sync.</p>
+                    <h3>Smart Analytics</h3>
+                    <p>See the bigger picture with min/max/mean statistics, class-wide performance summaries, and color-coded insights.</p>
                 </div>
 
                 <div class="feature-card">
-                    <h3>Privacy First</h3>
-                    <p>All data stays on your device and your personal iCloud (if enabled). We never access, collect, or share your student data.</p>
+                    <h3>Data You Control</h3>
+                    <p>Import or export CSV files easily, keep local backups, and sync via iCloud if you wish. No hidden cloud, no lock-in — full control is yours.</p>
                 </div>
+
             </div>
-
 
         </div>
     </section>
@@ -486,8 +487,6 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
     <section id="how-to-use">
         <div class="container">
             <h2>How to Use GradIn</h2>
-
-            <img src="img/ipad9.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
 
             <h3>Getting Started</h3>
 
@@ -549,6 +548,9 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
                 <li><strong>Color Coding:</strong> Green = validated outcome, Red = not validated, Gray = incomplete assessment</li>
                 <li><strong>Bulk Operations:</strong> Use Quick Assessment to efficiently grade multiple criteria for a student at once</li>
             </ul>
+
+            <img src="img/ipad9.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
+
         </div>
     </section>
 
