--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
             </p>
 
             <p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">
-— a tool built by a teacher, for teachers, designed with care in Brittany. — 
+— a tool built by a teacher, for teachers, designed with care in Brittany 🌊. — 
 
             </p>
 
