--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
 
                 <div class="feature-card">
                     <h3>Privacy by Design</h3>
-                    <p>Your data belongs to you. Everything stays on your device and your personal iCloud (if enabled) — never on our servers (we don’t even have any), never shared.</p>
+                    <p>Your data belongs to you. Everything stays on your device and your personal iCloud (if enabled) — never on our servers (I don’t even have any), never shared.</p>
                 </div>
 
                 <div class="feature-card">
