--- a/index.html
+++ b/index.html
@@ -547,6 +547,7 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
                 <li><strong>Assessment History:</strong> Toggle "Show Assessment Details" in student view to see all historical assessments</li>
                 <li><strong>Color Coding:</strong> Green = validated outcome, Red = not validated, Gray = incomplete assessment</li>
                 <li><strong>Bulk Operations:</strong> Use Quick Assessment to efficiently grade multiple criteria for a student at once</li>
+                <li><strong>QR Code Sharing:</strong> Generate a QR code to share individual progress reports with students. When scanned, it opens a pre-filled email containing a detailed summary of their progression.</li>
             </ul>
 
             <img src="img/ipad9.png" alt="Course List" style="width: 100%;border: 2px solid var(--border); border-radius: 12px;">
