--- a/index.html
+++ b/index.html
@@ -558,6 +558,35 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
     <!-- FAQ Section -->
     <section id="faq" style="background: #F9F9F9;">
         <div class="container">
+            <h2>About the Price $3.99</h2>
+
+            <div class="faq-item">
+                <div class="faq-question">The price of a coffee</div>
+                <div class="faq-answer">
+                    <p>
+                   Gradin isn’t a platform.
+                    It’s a simple tool built by a teacher, for teachers.
+                    It costs the price of a coffee — €3.99, lifetime license:  no subscriptions, no tracking, no servers.
+                    </p>
+                    <p>
+                    When you buy the app, you’re not paying a company.
+                    You’re simply offering me a coffee so I can keep improving Gradin and supporting teachers worldwide.
+                    That’s all. Simple, honest, human.
+                    </p>
+
+                    <p style="text-align:center;padding-top: 20px">
+                        — Because good teaching deserves good tools — and a good cup of coffee. ☕ —
+                    </p>
+                </div>
+            </div>
+
+
+        </div>
+    </section>
+
+    <!-- FAQ Section -->
+    <section id="faq">
+        <div class="container">
             <h2>Frequently Asked Questions</h2>
 
             <div class="faq-item">
@@ -647,7 +676,7 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
     </section>
 
     <!-- Contact Section -->
-    <section id="contact">
+    <section id="contact"  style="background: #F9F9F9;">
         <div class="container">
 
             <h2 style="text-align: center"> About the author </h2>
@@ -661,7 +690,7 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
                 No noise, no distractions — just a clear space where teaching and learning meet naturally.
             </p>
 
-            <p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto 40px;">
+            <p style="text-align:center;">
 — a tool built by a teacher, for teachers, designed with care in Brittany 🌊. — 
 
             </p>
