--- a/index.html
+++ b/index.html
@@ -556,32 +556,27 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
     </section>
 
     <!-- FAQ Section -->
-    <section id="faq" style="background: #F9F9F9;">
-        <div class="container">
-            <h2>About the Price $3.99</h2>
+    <section id="price" style="background: #F9F9F9;">
+    <div class="container">
+        <h2>The Price of a Coffee </h2>
 
-            <div class="faq-item">
-                <div class="faq-question">The price of a coffee</div>
-                <div class="faq-answer">
-                    <p>
-                   Gradin isn’t a platform.
-                    It’s a simple tool built by a teacher, for teachers.
-                    It costs the price of a coffee — €3.99, lifetime license:  no subscriptions, no tracking, no servers.
-                    </p>
-                    <p>
-                    When you buy the app, you’re not paying a company.
-                    You’re simply offering me a coffee so I can keep improving Gradin and supporting teachers worldwide.
-                    That’s all. Simple, honest, human.
-                    </p>
+        <p style="font-size: 1.2rem; max-width: 800px; margin: 0 auto; text-align: center; color: var(--text-secondary);">
+        Gradin isn’t a platform. It’s a simple tool built by a teacher, for teachers.
+        </p>
 
-                    <p style="text-align:center;padding-top: 20px">
-                        — Because good teaching deserves good tools — and a good cup of coffee. ☕ —
-                    </p>
-                </div>
-            </div>
+        <p style="font-size: 1.2rem; max-width: 800px; margin: 20px auto; text-align: center; color: var(--text-secondary);">
+        It costs the price of a coffee — €3.99, lifetime license. No subscriptions. No tracking. No servers.
+        </p>
 
+        <p style="font-size: 1.2rem; max-width: 800px; margin: 20px auto; text-align: center; color: var(--text-secondary);">
+        When you buy the app, you’re not paying a company.<br>
+        You’re simply offering me a coffee so I can keep improving Gradin and supporting teachers worldwide.
+        </p>
 
-        </div>
+        <p style="text-align:center; font-style: italic; margin-top: 30px;">
+        Because good teaching deserves good tools — and a good cup of coffee ☕
+        </p>
+    </div>
     </section>
 
     <!-- FAQ Section -->
