--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="GradIn - Professional outcome-based GradIng for teachers. Track student progress with standards-based assessment.">
-    <title>GradIn - Outcome-Based GradIng for Teachers</title>
+    <title>GradIn - Outcome-based assessment made simple, respectful, and human.</title>
     <style>
         :root {
             --indigo: #5856D6;
@@ -387,7 +387,7 @@
         <div class="container">
             <img src="./img/icon.png" alt="GradIn App Icon" class="app-icon">
             <h1>GradIn <span style="font-size:1rem;">[ɡʁa.dɛ̃]</span></h1>
-            <p>Outcome-based GradIng</p>
+            <p>Outcome-based assessment made simple, respectful, and human.</p>
         </div>
     </header>
 
