--- a/index.html
+++ b/index.html
@@ -499,7 +499,9 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
             <div class="step">
                 <span class="step-number">2</span>
                 <strong>Define Learning Outcomes</strong>
-                <p>Navigate to the Outcomes tab and tap "+" to create outcomes. Each outcome can have multiple criteria for assessment. Set a validation threshold (e.g., 75%) to determine when students have mastered the outcome.</p>
+                <p>Navigate to the Outcomes tab and tap "+" to create outcomes. Each outcome can have multiple criteria for assessment. Set a validation threshold (e.g., 75%) to determine when students have mastered the outcome.
+                    You can also directly load (or export) a JSON file describing your course structure (ex: <a href="./data/signal_processing_course.json" target="_blank">signal_processing_course.json</a>)
+                </p>
             </div>
 
             <div class="step">
