--- a/index.html
+++ b/index.html
@@ -399,6 +399,7 @@
             <li><a href="#how-to-use" class="menu-link">How to Use</a></li>
             <li><a href="#faq" class="menu-link">FAQ</a></li>
             <li><a href="#contact" class="menu-link">Contact</a></li>
+            <li><a href="docs.html" class="menu-link">Documentation</a></li>
             <li><a href="privacy.html" class="menu-link">Privacy Policy</a></li>
             <li>
                 <a href="https://github.com/vincentchoqueuse/GradIn/issues" target="_blank" rel="noopener" class="menu-link">
@@ -724,6 +725,7 @@ Move beyond grades. Measure growth. Keep the conversation at the heart of learni
 
             <p>&copy; 2025 GradIn. All rights reserved.</p>
             <p style="margin-top: 10px;">
+                <a href="docs.html" style="color: var(--indigo); text-decoration: none;">Documentation</a> |
                 <a href="privacy.html" style="color: var(--indigo); text-decoration: none;">Privacy Policy</a> |
                 <a href="#contact" style="color: var(--indigo); text-decoration: none;">Contact</a>
                 <a href="https://github.com/vincentchoqueuse/GradIn" target="_blank">GitHub</a> |
